aded new image and fixed grid images on mobile, footer on mobile

--- a/gym/css/gym-css.css
+++ b/gym/css/gym-css.css
@@ -717,8 +717,168 @@ li.nav-btn {
     }
 }
 
+@media (max-width: 700px ) {
+    .workouts-page-desktop-background {
+        height: 450px;
+    }
+    .workout-title {
+        font-size: 42px;
+    }
+    .workout-des {
+        font-size: 22px;
+    }
+    .workout-button {
+        width: 170px;
+        font-size: 22px;
+        height: 55px;
+        margin: unset;
+        margin-left: 20px;
+    }
+    .fitness {
+        grid-area: unset;
+    }
+    .workout-options-container {
+        grid-template-columns:100%;
+        grid-template-rows: 25% 25% 25% 25%;
+    }
+    .bodybuilding, .boxing {
+        background-position-y: -200px;
+    }
+    .discover-more-title {
+        padding: 10px;
+        font-size: 50px;
+    }
+    .about-us-text p {
+        font-size: 18px;
+    }
+    .about-us-text h1 {
+        font-size: 50px;
+    }
+}
+
+@media (max-width: 500px) {
+    .workouts-page-desktop-background {
+        height: 380px;
+    }
+    .background-text-wrapper {
+        gap: 50px;
+    }
+    .bodybuilding, .boxing {
+        background-position-y: unset;
+    }
+    .option-button-wrapper {
+        font-size: 22px;
+        padding: 25px;
+    }
+}
+
 /* end workouts page */
 
+/* gallery page */
+
+.grid-container {
+    background-color: black;
+    overflow: hidden;
+}
+
+.grid-wrapper {
+    display: grid;
+    height: 1100px;
+    grid-template-columns: 33.3% 33.3% 33.3%;
+    grid-template-rows: 30% 30% 40%;
+}
+
+.gallery-img-1 {
+    background-image: url(/images/gallery1.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    grid-area: 1 / 1 / 3 / 3;
+}
+
+.gallery-img-2 {
+    background-image: url(/images/gallery2.jpeg);
+    background-repeat: no-repeat;    
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.gallery-img-3 {
+    background-image: url(/images/gallery3.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.gallery-img-4 {
+    background-image: url(/images/gallery4.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.gallery-img-5 {
+    background-image: url(/images/gallery5.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    grid-area: 3 / 2 / 3 / 4;
+}
+
+.img-postion-gallery {
+    transition: 2s ease-in-out all;
+    background-position-y: -150px;
+}
+
+.img-postion-gallery:hover {
+    transform: scale(1.2);
+}
+
+.slider-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.slider-wrapper {
+    margin: 30px;
+    margin: 50px;
+    padding: 0px 20px;
+}
+
+.imgslides {
+    max-width: 100%;
+    border: 1px solid;
+}
+
+.imgslides:nth-child(2), .imgslides:nth-child(3) {
+    display: none;
+}
+
+@media (max-width: 2000px) {
+    .img-postion-gallery {
+        background-position-y: unset;
+    }
+}
+
+@media (max-width: 1000px) {
+    .slider-wrapper {
+        margin: 20px;
+    }
+}
+
+@media (max-width:500px) {
+    .slider-wrapper {
+        margin: 10px;
+        padding: 0px 10px;
+    }
+}
+/* end gallery page */
 
 /* footer */
 
@@ -732,6 +892,7 @@ li.nav-btn {
     flex-direction: column;
     background-color: #d7d7d7;
     background-image: linear-gradient(147deg, #d7d7d7 0%, #353535 74%);
+    overflow: hidden;
 }
 
 .footer-text {
@@ -786,5 +947,39 @@ li.social-link {
 li.social-link svg {
     width: 25px;
     height: 25px;
+}
+
+@media (max-width: 1000px) {
+    .footer-logo {
+        display: none;
+    }
+}
+
+@media (max-width: 700px) {
+    .footer-main {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .socials {
+        flex-direction: row;
+        width: unset;
+        margin-left: 40px;
+        margin-top: 40px;
+    }
+    .social-wrapper {
+        gap: 30px;
+    }
+    .grid-wrapper {
+        height: 750px;
+    }
+    .footer-buttons, .social-title {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 500px) {
+    .grid-wrapper {
+        height: 500px;
+    }
 }
 /* end footer */
